fix overflow of note body

--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -56,6 +56,7 @@
   p {
     margin: 5px 0; 
     height: 58px;
+    width: 270px;
     overflow: hidden;
   }
 
